# micrograd_cpp

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  microgradcpp_beko
include/: Network.h  Value.h
src/: Network.cpp  Value.cpp  main.cpp
